--- a/src/index.css
+++ b/src/index.css
@@ -13,14 +13,29 @@
 body {
   width: 100vw;
   height: 100vh;
-  box-sizing: border-box;
+  margin: 0;
+  background-image: url(./assets/image/wrapper.jpg);
+  background-size: cover;
   font-family: "Montserrat Alternates";
-  background-color: oklch(0.2 0.02 255);
+}
+
+body::before  {
+  content: "";
+  position: fixed;
+  inset: 0;
+  z-index: 0;
+  backdrop-filter: blur(12px) saturate(100%);
+  background: linear-gradient(
+    135deg,
+    oklch(1 0 0 / 0.15),
+    oklch(1 0 0 / 0.05)
+  );
 }
 
 @theme {
-  --color-primary-color: oklch(0.2 0.02 255);
-  --color-accent-color: oklch(0.65 0.1 48);
+  --color-wrapper: oklch(0.9833 0.0239 196.77);
+  --color-primary-color: oklch(0.5118 0.2269 273.18);
+  --color-accent-color: oklch(0.75 0.1011 196.77);
   --color-secondary-color: oklch(0.28 0.02 260);
   --color-text-color: oklch(0.92 0.01 260);
   --color-accent-hover: oklch(0.7 0.11 48);
